# hmumu_transformer

./: README.md  pixi.toml  pyproject.toml  selection_10000.py
configs/: data.yaml  experiment.yaml  loss.yaml  model.yaml  schema.yaml  train.yaml
runs/: latest
runs/20260306_035240_c2fb2232/: config_merged.json  env.json  history.json
runs/20260306_035716_38bee607/: env.json  history.json  mass_bins.json  test_metrics.json  x_scaler.json
scripts/: evaluate.py  train.py
src/hmumu_transformer/: preflight.py  typing.py
src/hmumu_transformer/data/: balanced_sampler.py  build.py  dataset.py  reader.py  scaler.py  split.py  tokenizer.py
src/hmumu_transformer/eval/: mass_sculpting.py  metrics.py  plots.py
src/hmumu_transformer/losses/: mass_bins.py
src/hmumu_transformer/models/: attention.py  encoder.py  grl.py  heads.py  model.py  pairwise.py
src/hmumu_transformer/train/: early_stopping.py  loop.py  optimizer.py
src/hmumu_transformer/utils/: config.py  env.py  run.py
